force-app/main/default/objects/Survey_Answer__c/Survey_Answer__c.object-meta.xml
<CustomObject>
    <description>An answer to a survey question</description>
    <label>Survey Answer</label>
    <nameField>
        <displayFormat>SA-{000000000}</displayFormat>
        <label>Survey Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>