force-app/main/default/objects/Survey_Answer__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>The data type of the answer</description>
    <inlineHelpText>The data type of the answer</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Types</valueSetName>
    </valueSet>
</CustomField>