force-app/main/default/objects/Survey_Answer__c/fields/Date_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_Answer__c</fullName>
    <description>The answer in response to a survey question with a Date data type</description>
    <inlineHelpText>The answer in response to a survey question with a Date data type</inlineHelpText>
    <label>Date Answer</label>
    <type>Date</type>
</CustomField>