force-app/main/default/objects/Survey_Answer__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>The help text at the time the question was answered</description>
    <inlineHelpText>The help text at the time the question was answered</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>