force-app/main/default/objects/Survey_Answer__c/fields/Number_Answer__c.field-meta.xml
<CustomField>
    <fullName>Number_Answer__c</fullName>
    <description>The answer in response to a survey question with a Number data type</description>
    <inlineHelpText>The answer in response to a survey question with a Number data type</inlineHelpText>
    <label>Number Answer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>