force-app/main/default/objects/Survey_Answer__c/fields/Text_Answer__c.field-meta.xml
<CustomField>
    <fullName>Text_Answer__c</fullName>
    <description>The answer in response to a survey question with a Text data type</description>
    <inlineHelpText>The answer in response to a survey question with a Text data type</inlineHelpText>
    <label>Text Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>